fix div overflow to scroll

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,9 @@ ul {list-style-type: none;}
 li {list-style-type: none;}
 a {padding: 1em;
   text-decoration: none;}
+  
+#incomplete {
+  width: auto;
+  height: auto;
+  overflow: scroll;
+}
